# DS5001_Final_Project

./: .gitignore  01-lib.ipynb  02-corpus.ipynb  03-vocab.ipynb  04-bow-tfidf.ipynb  05-pca.ipynb  06-lda.ipynb  07-sentiment.ipynb  08-word2vec.ipynb  09-riffs.ipynb  FinalProject.ipynb  LIB.csv  agatha.ipynb  corpus_exploration.ipynb  data_gathering.ipynb  main.py  mystery_corpus_gathering.ipynb  pyproject.toml  test.qmd  todo.ipynb
archive/: compare_provenance.py
archive/scrapers/: indigo_scraper.py
notes/: todo.ipynb
scrapers/: joni_scraper.py
scripts/: 01-lib.py  generate_lib.py  ingest_corpus.sh
